--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1",
+    "vue2-timepicker": "^1.0.8",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.3.0"
   },
